// -*- compile-command: "protoc paxos-msg.proto --java_out=../java/" -*-

syntax = "proto2";
package  org.axesoft.jaxos.network.protobuff;

option java_outer_classname="PaxosMessage";

enum Code {
  NONE = 0;

  JOIN_REQ = 1;
  JOIN_RES = 2;
  
  PREPARE_REQ = 3;
  PREPARE_RES = 4;
  ACCEPT_REQ = 5;
  ACCEPT_RES = 6;
  
  CHOSEN_NOTIFY = 7;
  //NOOP=10;

  LEARN_REQ = 11;
  LEARN_RES = 12;
}

message DataGram {
  required Code code = 1;
  required int32 sender = 2;
  required int64 timestamp = 3;
  required bytes body = 4;
}

message JoinReq {
  required bytes token = 1;
  required bytes hostname = 2;
  required int32 partitionNumber = 3;
  required bytes jaxosMessageVersion = 4;
  required bytes appMessageVersion = 5;
  required bytes destHostname = 6;
}

message JoinRes {
  required int32 result = 1;
  required bytes msg = 2;
}

enum ValueType {
  NOTHING = 0;
  APPLICATION = 1;
  NOOP = 2;
}

message BallotValue {
  required int64 id = 1;
  required ValueType valueType = 2;
  required bytes content = 3;
}

message ChosenInfo {
  required int64 instanceId = 1;
  required int64 ballotId = 2;
  required int64 elapsedMillis = 3;
}

message PrepareReq {
  required int32 squadId = 1;
  required int64 instanceId = 2;
  required int32 round = 3;
  required int32 proposal = 4;
  required ChosenInfo chosenInfo = 5;
}

message PrepareRes {
  required int32 squadId = 1;
  required int64 instanceId = 2;
  required int32 round = 3;
  required int32 result = 4;
  required int32 maxProposal = 5;
  required int32 acceptedProposal = 6;
  required BallotValue acceptedValue = 7;
  required ChosenInfo chosenInfo = 8;
}

message AcceptReq {
  required int32 squadId = 1;
  required int64 instanceId = 2;
  required int32 round = 3;
  required int32 proposal = 4;
  required BallotValue value = 5;
  required ChosenInfo chosenInfo = 6;
}

message AcceptRes {
  required int32 squadId = 1;
  required int64 instanceId = 2;
  required int32 round = 3;
  required int32 result = 4;
  required int32 maxProposal = 5;
  required int64 acceptedBallotId = 6;
  required ChosenInfo chosenInfo = 7;
}

message AcceptedNotify {
  required int32 squadId = 1;
  required int64 instanceId = 2;
  required int32 proposal = 3;
  required int64 ballotId = 4;
} 
  
message LearnReq {
  required int32 squadId = 1;
  required int64 lowInstanceId = 2;
}

message LearnRes {
  required int32 squadId = 1;
  repeated Instance instance = 2;
  required CheckPoint checkPoint = 3;
}

message Instance {
  required int32 squadId = 1;
  required int64 instanceId = 2;
  required int32 proposal = 3;
  required BallotValue value = 4;
}

message SquadChosen {
  required int32 squadId = 1;
  required int64 instanceId = 2;
}

message CheckPoint {
  required int32 squadId = 1;
  required int64 timestamp = 2;
  required bytes content = 3;
  required Instance lastInstance = 4;
} 
  
